stylesheet.css
*
{
    margin: 0;
    padding: 0;
}

.wrapper
{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}
.panneau1
{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    background: linear-gradient(rgb(139, 195, 245), #1294b8);
}
.spacer
{
    display: flex;
    flex-grow: 1;
}
.pageTop
{
    display: flex;
    flex-grow: 1;
    flex-direction:row;
    justify-content: space-evenly;
    color: white;
}
.marqueNom
{
    display: flex;
    flex-direction: row;
}
nav
{
    display: flex;
    flex-direction: row;
    padding: 0 5% 0 5%;
}   
ul
{
    list-style-type: none;
}
li
{
    display: inline ;
    padding: 0 1% 0 1%;
}

